@@ -114,6 +114,7 @@ export(net.loads)
 export(net.scores)
 export(network.compare)
 export(network.estimation)
+export(network.fit)
 export(network.predictability)
 export(plot_clusters)
 export(polychoric.matrix)
