@@ -114,18 +114,6 @@ How well do network models predict observations? On the importance of predictabi
 Williams, D. R., & Rodriguez, J. E. (2022).
 Why overfitting is not (usually) a problem in partial correlation networks.
 \emph{Psychological Methods}, \emph{27}(5), 822–840.
-
-\strong{Cohen's Kappa} \cr
-Cohen, J. (1960). A coefficient of agreement for nominal scales.
-\emph{Educational and Psychological Measurement}, \emph{20}(1), 37-46.
-
-Cohen, J. (1968). Weighted kappa: nominal scale agreement provision for scaled disagreement or partial credit.
-\emph{Psychological Bulletin}, \emph{70}(4), 213-220.
-
-\strong{Krippendorff's alpha} \cr
-Krippendorff, K. (2013).
-Content analysis: An introduction to its methodology (3rd ed.).
-Thousand Oaks, CA: Sage.
 }
 \author{
 Hudson Golino <hfg9s at virginia.edu> and Alexander P. Christensen <alexpaulchristensen@gmail.com>
